--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_ui_auth: ^1.16.0
   cloud_firestore: ^5.4.5
-  google_maps_flutter: ^2.1.0
+  google_maps_flutter: ^2.2.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
