--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cloud_firestore: ^5.4.5
   google_maps_flutter: ^2.2.0
   permission_handler: ^10.0.0
+  geolocator: ^9.0.2
+  image: ^3.0.1
+  intl: 0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,10 @@ flutter:
       - assets/bustii.png
       - assets/edsa.png
       - assets/profile.png
+      - assets/student.png
+      - assets/boy.png
+      - assets/bus.png
+      - assets/flag.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
