--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   geolocator: ^9.0.2
   image: ^3.0.1
   intl: 0.19.0
+  qr_code_scanner_plus: ^2.0.10+1
+  mobile_scanner: ^3.2.0
 
 dev_dependencies:
   flutter_test:
