--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   intl: 0.19.0
   qr_code_scanner_plus: ^2.0.10+1
   mobile_scanner: ^3.2.0
+  google_fonts: ^6.2.1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
